src/components/App.css
/* ... */
.resource .data .propCollapseHeader,
.resource .data .propCollapse.in-true { overflow:visible; position:relative; }



.hover-menu { position:absolute; /*width:50px;*/ right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
line-height:12px; } 
.hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
.hover-menu div span#nb { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:2px;cursor:pointer;}
.hover-menu span#anchor { display:inline-block; position:relative;}

.hover-menu span#anchor a:hover { border:none;}

.hover-menu.on,
.resource .data [data-prop="bdo:note"] .sub:hover .hover-menu,
:not(#etext-scroll) > h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }

.resource .data:not(.legal-props) .group:hover > h4:not(.first):not(.multiple) + .hover-menu { opacity:1; }

#popHoverM .resource .data h4[data-prop="bdo:role"] + h4 .hover-menu,
#popHoverM .resource .data h4[data-prop="bdo:creator"] + .subgroup > h4.first,
#popHoverM .resource .data h4[data-prop="bdo:creator"],
#popHoverM .resource .data h4[data-prop="bdo:role"],
.resource .data.data.legal-props > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu,
.resource .data > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu { display:none !important; }


a.no-bdrc img { position:absolute; margin-top:-2px; opacity:0; } 
h4:hover a.no-bdrc img { opacity:1; }

/* ------------------------------------------------------------------------------------------------------------------------ properties/misc */

.resource .data.access { text-align:center; padding-bottom:80px;}

.resource .data.top-props .has-collapse:not(.custom):last-child { margin-bottom:-25px; }

.resource .data { text-align:left ; background-color:#ffffff; padding:20px 70px;}
.resource .title + .data { padding-top:35px;padding-bottom:35px; }
.resource > .data:last-child { padding-bottom:50px; }
.resource .data + .data { padding-top:1px; }
.resource .title + .data + .data { padding-bottom:60px; }

.resource .data h2.intro,
.resource .data h2.intro + h2 span,
.resource .title + .data + .data h2.on .T + span { font-size:30px; font-family:'Noto Sans SemCond';font-weight:bold; }

.resource .data h2.intro { padding-right:8px;}

.resource .data h2.intro,
.resource .data h2.intro + h2,
.resource .data h2.intro + h2 span { display:inline;}

.resource .data h2.intro + h2 .lang,
.resource .data h2.intro + h2 .T { display:none; }

/* .resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:nowrap;box-sizing: border-box;width:100%;position:relative;} */
.resource .data > div:not(.firstImage):not(.browse):not(.header) { display:block; position:relative; }
.resource .data:not(.ext-props):not(#perma) > div:not(.firstImage):not(.browse):not(.header)::after { content:''; width:calc(100% - 190px);; height:1px;margin:25px 0 25px 190px;display:block;}
.resource .data > div:not(.firstImage):not(.browse):not(.header):not(:last-child)::after { background:rgba(0,0,0,0.25);}
.resource .data.top-props > div:last-child::after { margin-bottom:20px !important; margin-top:0 !important; }

.resource .data > div > h3 { width:calc(190px - 15px); padding-right:15px; /*line-height:24px;*/  vertical-align: top; }
.resource .data > div.parent { flex-wrap:wrap; }
.resource .data > div.parent > h3 { flex-shrink:0 }
.resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:14px; font-weight:normal; 
   overflow-wrap: break-word;  word-break: break-word; /*margin-right:5px; line-height:30px;*/ }
.resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
.resource h3 { font-size:14px;margin-top:-1px; }
.resource .sub { width:calc(100% - 190px); /*padding-left:20px;*/ display:inline-flex; /*flex-wrap:wrap;*/ box-sizing: border-box; position:relative;
   align-items:baseline;
}
.resource .sub h4.first { /*font-size:0.85em; font-style:italic;*/ text-transform:capitalize; flex-shrink:0; /*line-height:1.6em;*/  margin-right:15px;
   vertical-align: top; font-size:15px; ;
}

.resource .data > div > h3 { line-height:24px; }


span.in { font-weight:500;padding-left:0px; padding-right:10px; margin-left:36px; }
.resource h4 .over-in { white-space:pre;}
/* .resource h4 .in { vertical-align: middle; } */

.resource .group > h4.multiple > span:not(.lang):not(.in):not(.hover-anchor):not(.ulink.provider),
.resource .group > h4.multiple > span .urilink, 
.resource .group > h4:first-child:not(.first),
.resource .group > h4:first-child:not(.first) .ulink { vertical-align: top;}

/* .resource .group > h4.multiple, */
/* .resource .group > h4.multiple > span, */
.resource .group > h4:first-child:not(.first),
.resource .group > h4.multiple .urilink, 
.resource .sub > h4.label,
.resource .sub h4.first,
.resource .subsub { line-height:23px;  }

.resource [data-prop="skos:altLabel"] .group > h4:first-child:not(.first) + h4.multiple { margin-top:-4px; }

 .resource .sub .sub h4.first.type,
.resource .sub h4.first.prop { font-style:normal;/*font-size:0.8em; line-height:20px;*/ }

/* .resource .sub h4.first + h4:not(.multiple) { margin-left:5px;} */

.resource .subsub { /*width:100%; padding-left:5px; display: flex;*/align-items: baseline;flex-wrap:wrap;position:relative; box-sizing: border-box;
   padding-right:5px;}

/* .resource .subsub h4 { flex-shrink:0 ; } */
/* .resource .subsub:first-child:before, */
.resource div .sub.here:before { content:"•";position:absolute; width:10px;margin-left:-10px;top:11px; }
/* .resource .subsub:first-child { margin-top:10px; } */
.resource .subsubsub.full,
.resource .subsub.full { flex-wrap:wrap; }
.resource .subsubsub.full > h4.first,
.resource .subsub.full > h4.first { width:100%; }
.resource h3 + .sub .subsub:first-child { margin-top:0px; }
/* ... */

